[tool.poetry]
name = "python-zoo"
version = "0.1.0"
description = ""
authors = ["Er Rad"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
flask = "^3.0.3"
flasgger = "^0.9.7.1"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
